--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,7 @@
 
 
     "jupyter.notebookFileRoot": "${workspaceFolder}",
-    "jupyter.interactiveWindow.textEditor.executeSelection": false,
+    "jupyter.interactiveWindow.textEditor.executeSelection": true,
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
     },
