--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,22 +1,84 @@
-{
-
-    
+{   
 
     "macros": {  // Note: this requires macros extension by publisher:"geddski" 
-    "pythonExecSelectionAndCursorDown": [
-    "python.execSelectionInTerminal", 
-    "cursorDown" 
-    ]
-},
+        "pythonExecSelectionAndCursorDown": [
+        "python.execSelectionInTerminal", 
+        "cursorDown" 
+        ]
+    },
 
-"python.dataScience.autoScrolling": true,
+    "python.dataScience.autoScrolling": true,
+    "window.zoomLevel": -1,
+    "editor.fontSize": 14,
+    "editor.formatOnSave": false,
+    "editor.formatOnPaste": false,
+    "editor.formatOnType": false,
 
     "jupyter.notebookFileRoot": "${workspaceFolder}",
     "jupyter.interactiveWindow.textEditor.executeSelection": true,
     "[python]": {
         "editor.defaultFormatter": "ms-python.autopep8"
     },
+
     "python.formatting.provider": "none",
+
+    "better-comments.multilineComments": true,
+    "better-comments.highlightPlainText": false,
+    "better-comments.tags": [
+        {
+          "tag": "!",
+          "color": "#FF2D00",
+          "strikethrough": false,
+          "underline": false,
+          "backgroundColor": "transparent",
+          "bold": false,
+          "italic": false
+        },
+        {
+          "tag": "?",
+          "color": "#3498DB",
+          "strikethrough": false,
+          "underline": false,
+          "backgroundColor": "transparent",
+          "bold": false,
+          "italic": false
+        },
+        {
+          "tag": "//",
+          "color": "#474747",
+          "strikethrough": true,
+          "underline": false,
+          "backgroundColor": "transparent",
+          "bold": false,
+          "italic": false
+        },
+        {
+          "tag": "todo",
+          "color": "#FF8C00",
+          "strikethrough": false,
+          "underline": false,
+          "backgroundColor": "transparent",
+          "bold": false,
+          "italic": false
+        },
+        // {
+        //   "tag": "*",
+        //   "color": "#98C379",
+        //   "strikethrough": false,
+        //   "underline": false,
+        //   "backgroundColor": "transparent",
+        //   "bold": false,
+        //   "italic": false
+        // },
+        {
+            "tag": "*",
+            "color": "#516940",
+            "strikethrough": false,
+            "underline": true,
+            "backgroundColor": "transparent",
+            "bold": true,
+            "italic": false
+          }
 
 
 
